tests/e2e/expression_is_nested_2.error
Error: syntax error in story at line 1, column 5

1|    a = 1 == 2 < 3 or 4 > 0.5+5 == -6 and 7 == 8
          ^^^^^^^^^^

E0123: `boolean` can't be compared with `int`
