tests/e2e/expression_is_nested_2.story
a = 1 == 2 < 3 or 4 > 0.5+5 == -6 and 7 == 8
